added load balancer and test endpoint
