# doc/openapi.yaml
@@ -2,6 +2,7 @@ openapi: 3.0.0
 
 servers:
     - url: http://localhost:8000
+    - url: http://localhost:8080/balance-api
 
 paths:
     /user:
@@ -89,6 +90,20 @@ paths:
                                     type: string
                             required:
                                 - name
+            responses:
+                '200':
+                    description: A JSON array of product names
+                    content:
+                        application/json:
+                            schema:
+                                type: array
+                                items:
+                                    type: string
+
+    /orders/list:
+        get:
+            summary: Returns a list of products.
+            description: Optional extended description in CommonMark or HTML
             responses:
                 '200':
                     description: A JSON array of product names
